--- a/.project.json
+++ b/.project.json
@@ -12,7 +12,8 @@
     "excludedFiles": [
       "test.html"
     ],
-    "buildRequired": true
+    "buildRequired": true,
+    "lastBuildDateTime": "Tue, 02 Jul 2019 19:26:41 GMT"
   },
   "dataBinding": {
     "/webapp/view/App.view.xml": {
@@ -71,5 +72,9 @@
     "notifyBeforePushLevel": "Error",
     "blockPush": false,
     "blockPushLevel": "Error"
+  },
+  "deploy": {
+    "destination": "S4H",
+    "name": "ZFLIGHT_99_APP"
   }
 }
