--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -11,7 +11,7 @@
 		},
 		"dataSources": {
 			"mainService": {
-				"uri": "/here/goes/your/serviceurl/",
+				"uri": "/sap/opu/odata/sap/ZFLIGHT_SH_SRV/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0",
@@ -67,7 +67,10 @@
 			},
 			"": {
 				"dataSource": "mainService",
-				"preload": true
+				"preload": true,
+				"settings": {
+					"useBatch": false
+				}
 			}
 		},
 		"routing": {
@@ -87,7 +90,15 @@
 					"target": [
 						"master",
 						"details"
-					]					
+					]
+				},
+				{
+					"pattern": "{CustomerId}",
+					"name": "details",
+					"target": [
+						"master",
+						"details"
+					]
 				}
 			],
 			"targets": {
@@ -100,5 +111,9 @@
 				}
 			}
 		}
+	},
+	"sap.platform.abap": {
+		"uri": "/sap/bc/ui5_ui5/sap/zflight_99_app/webapp",
+		"_version": "1.1.0"
 	}
 }
